<resources>
    <string name="app_name">NoteKeeper</string>

    <string name="sort_by">Sort By</string>
    <string name="order">Order</string>
    <string name="search">Search</string>
    <string name="save">Save</string>
    <string name="pick_color">Pick a color</string>

    <string name="note_title">Title</string>
    <string name="text_date">Date</string>
    <string name="text_note">Whole note</string>

    <string name="add">Add</string>
    <string name="undo">Undo</string>

    <string name="title">Title</string>
    <string name="note">Note</string>
    <string name="new_note">New note</string>

    <string name="by_title">Title</string>
    <string name="by_date">Date</string>
    <string name="ascending">Ascending</string>
    <string name="descending">Descending</string>
</resources>
