<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?android:colorBackground">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textSize="16sp"
        android:text="@string/sort_by"/>

    <RadioGroup android:id="@+id/sortTypes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp">
        <RadioButton android:id="@+id/sortBy_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/by_title"/>
        <RadioButton android:id="@+id/sortBy_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/by_date"/>
    </RadioGroup>

    <View
        android:layout_width="150dp"
        android:layout_height="1dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@android:color/darker_gray" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textSize="16sp"
        android:text="@string/order"/>

    <RadioGroup android:id="@+id/sortOrders"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp">
        <RadioButton android:id="@+id/order_ascending"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ascending"/>
        <RadioButton android:id="@+id/order_descending"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/descending"/>
    </RadioGroup>

</LinearLayout>