<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_note"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:layout_margin="5dp"
    card_view:cardBackgroundColor="#C0C0C0"
    card_view:cardCornerRadius="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent">

        <TextView
            android:id="@+id/title_text"
            android:layout_width="296dp"
            android:layout_height="25dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="21dp"
            android:layout_marginBottom="5dp"
            android:layout_toStartOf="@+id/date_text"
            android:fontFamily="sans-serif-black"
            android:text="@string/note_title"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/date_text"
            android:layout_width="70dp"
            android:layout_height="40dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="5dp"
            android:text="@string/text_date" />

        <TextView
            android:id="@+id/inside_text"
            android:layout_width="wrap_content"
            android:layout_height="18dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="3dp"
            android:text="@string/text_note"
            android:maxLength="40"
            android:textSize="12sp" />


    </RelativeLayout>
</androidx.cardview.widget.CardView>